# shux

./: .dockerignore  .gitignore  .luarc.json  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  BUILD_OPTIONS.md  Dockerfile.sim.env  Dockerfile.test  GHOSTTY_SETUP.md  GOTOR_FEATURES.md  KEYMAP.md  Makefile  README.md  REPLACING_ALACRITTY_WITH_C.md  ROADMAP.md  build-ghostty.sh  commands.go  dockerfile.sim.env  feature.md  go.mod  go.sum  gomux  gomux-test  integration_test.go  libghostty_features.md  log.go  main.go  main_test.go  messages.go  middleware.go  pane.go  pane_actor.go  pane_actor_test.go  pane_test.go  pty.go  pty_test.go  session.go  session_actor.go  session_actor_test.go  (+7 more)
.github/workflows/: ci.yml  docker-parity.yml  docs.yml  publish-wiki.yml  release.yml
cmd/gomux/: main.go
cmd/gomux-test/: main.go
cmd/shux/: client.go  config.go  config_integration_test.go  config_lua.go  config_test.go  main.go  owner.go  root.go
demo/vhs/: .gitignore  bash-shell.sh  border-config-test.tape  debug-user-config.tape  debug-user-fix.sh  debug-user-fixed.tape  debug-user-setup.sh  node-heartbeat.js  open-less.sh  open-nvim-draft.sh  reset-demo.sh  run-node-heartbeat.sh  run-shux.sh  run-wc-demo.sh  shux-demo.tape  verify-border-config.sh
docs/: astro.config.mjs  package-lock.json  package.json
docs/rehype/: base-path.js
gomux-term/: Cargo.toml  README.md  build.sh  gomux_term.h
gomux-term/src/: lib.rs  libtsm_wrapper.c  main.rs  simple_term.c  term.rs
internal/cfg/: ui.go  (+7 more)
lua/: shux.lua
scripts/: build-ghostty-vt.sh
wiki/: Home.md  README.md
(+257 files in other folders)
