[package]
name = "gomux-term"
version = "0.1.0"
edition = "2021"

[lib]
name = "gomux_term"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "termactor_test"
path = "src/main.rs"

[dependencies]
alacritty_terminal = { path = "/tmp/alacritty/alacritty_terminal" }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
